Add triplet loss analysis and augmentation experiments
Major updates:
1. Triplet Loss Analysis (TRIPLET_LOSS_ANALYSIS.md)
   - Identified critical bug: false negative with same-image samples
   - ~50% images have multiple captions causing incorrect penalty
   - Proposed fix using image_id-based positive mask
   - Estimated 4.4% samples affected, targeting 1-3% improvement

2. Augmentation Experiments (AUGMENTATION_EXPERIMENTS.md)
   - Implemented backtranslation (EN->ZH->EN) data augmentation
   - Tested 10%-100% replacement ratios on RSICD/RSITMD
   - Initial results show minimal improvement (±0.5%)

3. Model & Training Improvements
   - Fixed local CLIP model loading for offline training
   - Adjusted batch sizes (96/64) to prevent OOM errors
   - Added GPU config f023 (GPUs 0,2,3)

4. Configuration Files
   - Added augmentation configs for multiple ratios
   - Updated batch sizes in all ViT configs

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,18 @@ Thumbs.db
 *~
 .tmp/
 
+
+# Checkpoints and training outputs
+checkpoints/
+models/pretrain/
+pretrain/
+
+# Dataset files
+dataset/*.zip
+data/augmented/*.json
+
+# Training logs
+training_*.log
+
+# Downloaded models
+*.bin
